--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
 html,
 body,
 #root {
-  height: 100%;
+  width: 100vw;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #d0fbc3;
-  font-family: 'Audiowide', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  background: linear-gradient(to right, #ecfae5, #ddf6d2, #cae8bd, #b0db9c);
 }
 
 .logo {
