--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 #root {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
   background: linear-gradient(to right, #ecfae5, #ddf6d2, #cae8bd, #b0db9c);
+  overflow-x: hidden;
 }
 
 .logo {
