--- a/backend/users/templates/users/success.html
+++ b/backend/users/templates/users/success.html
@@ -4,6 +4,7 @@
     <title>Success</title>
 </head>
 <body>
+    {% csrf_token %}
     <h2>{{ message }}</h2>
     <p>Welcome, {{ user.username }}!</p>
 </body>
