--- a/backend/users/templates/users/signup.html
+++ b/backend/users/templates/users/signup.html
@@ -8,13 +8,23 @@
     <form method="POST" action="{% url 'signup' %}">
         {% csrf_token %}
         <label for="username">Username:</label><br>
-        <input type="text" name="username" id="username"><br><br>
+        <input type="text" name="username" id="username" required><br><br>
 
         <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email"><br><br>
+        <input type="email" name="email" id="email" required><br><br>
 
         <label for="password">Password:</label><br>
-        <input type="password" name="password" id="password"><br><br>
+        <input type="password" name="password" id="password" required><br><br>
+
+        <label for="dateOfBirth">Date of Birth:</label><br>
+        <input type="date" name="dateOfBirth" id="dateOfBirth"><br><br>
+
+        <label for="profession">Profession:</label><br>
+        <select name="profession" id="profession">
+            <option value="student">Student</option>
+            <option value="researcher">Researcher</option>
+            <option value="professional">Professional</option>
+        </select><br><br>
 
         <button type="submit">Sign Up</button>
     </form>
